syntax = "proto3";

package product;
option go_package = "/products"; 

service ProductService {
  rpc FindOne (FindOneRequest) returns (FindOneResponse);
  rpc Create (CreateRequest) returns (ProductResponse);
  rpc Update (UpdateRequest) returns (ProductResponse);
  rpc Delete (DeleteRequest) returns (ProductResponse);
  rpc FindAll (FindAllRequest) returns (FindAllResponse);
}

message FindOneRequest {
  int32 id = 1;
}

message FindOneResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  int32 quantity = 5;
}

message CreateRequest {
  string name = 1;
  string description = 2;
  float price = 3;
  int32 quantity = 4;
}

message UpdateRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  int32 quantity = 5;
}

message DeleteRequest {
  int32 id = 1;
}

message ProductResponse {
  bool success = 1;
}

message FindAllRequest {}

message FindAllResponse {
  repeated FindOneResponse products = 1;
}
